# mambo-pedidos

./: .gitignore  README.md  build.sh  package-lock.json  package.json  setup.sh
.github/workflows/: release.yml
src/: index.html  validator.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: styles.css
src/js/: aiDisambiguator.js  app.js  calculator.js  fileImporter.js  pdfParser.js  quoteGenerator.js  storage.js  tests.js  transformersAi.js  updater.js  validations.js
