[package]
name = "mambo-pedidos"
version = "0.5.0"
description = "Mambo Pedidos - Gestor de catalogos y pedidos"
authors = ["Mambo"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "mambo_pedidos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-store = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true




